--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<h1>hi from html</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Location Data</title>
+</head>
+<body>
+    <button id="getLocationBtn">Get Location</button>
+    <a id="downloadLink" style="display: none;">Download Location Data</a>
+
+    <script>
+        document.getElementById("getLocationBtn").addEventListener("click", function () {
+            if ("geolocation" in navigator) {
+                navigator.geolocation.getCurrentPosition(function (position) {
+                    const latitude = position.coords.latitude;
+                    const longitude = position.coords.longitude;
+                    const timestamp = new Date().toLocaleString();
+
+                    // Create a data string to save to the text file
+                    const data = `Latitude: ${latitude}, Longitude: ${longitude}, Timestamp: ${timestamp}`;
+
+                    // Create a Blob with the data
+                    const blob = new Blob([data], { type: "text/plain" });
+
+                    // Create a temporary URL for the Blob
+                    const url = URL.createObjectURL(blob);
+
+                    // Set the download link's attributes
+                    const downloadLink = document.getElementById("downloadLink");
+                    downloadLink.href = url;
+                    downloadLink.download = "location_data.txt";
+
+                    // Show the download link
+                    downloadLink.style.display = "block";
+                }, function (error) {
+                    alert("Error getting location: " + error.message);
+                });
+            } else {
+                alert("Geolocation is not supported by your browser.");
+            }
+        });
+    </script>
+</body>
+</html>
